com.github.lainsce.notejot (1.0.5) xenial; urgency=low

  * The window position is now saved.

 -- Lains <lainsce@airmail.cc>  Sat, 27 May 2017 11:25:00 -0300

com.github.lainsce.notejot (1.0.3) xenial; urgency=low

  * New button - the Clear note button.
  * Only one instance of the window may now be opened.

 -- Lains <lainsce@airmail.cc>  Sat, 27 May 2017 11:25:00 -0300

com.github.lainsce.notejot (1.0.2) xenial; urgency=low

  * Fixed notes not being saved on quit

 -- Lains <lainsce@airmail.cc>  Sat, 27 May 2017 08:00:00 -0300

com.github.lainsce.notejot (1.0.1) xenial; urgency=low

  * Fixed background of the tootip being white instead of the normal color.
  * Made the note have an actual color

 -- Lains <lainsce@airmail.cc>  Sat, 26 May 2017 00:00:00 -0300

com.github.lainsce.notejot (1.0.0) xenial; urgency=low

  * Stable release.

 -- Lains <lainsce@airmail.cc>  Sat, 25 May 2017 11:05:00 -0300

com.github.lainsce.notejot (0.1.9) xenial; urgency=low

  * More debian fixes.

 -- Lains <lainsce@airmail.cc>  Sat, 25 May 2017 08:21:00 -0300

com.github.lainsce.notejot (0.1.8) xenial; urgency=low

  * Debian fixes.

 -- Lains <lainsce@airmail.cc>  Sat, 25 May 2017 08:21:00 -0300

com.github.lainsce.notejot (0.1.7) xenial; urgency=low

  * AppCenter fixes.

 -- Lains <lainsce@airmail.cc>  Sat, 25 May 2017 08:21:00 -0300

com.github.lainsce.notejot (0.1.6) xenial; urgency=low

  * Initial Release.

 -- Lains <lainsce@airmail.cc>  Sat, 25 May 2017 08:00:00 -0300